Implementando endpoints de exclusão de arquivos e elementos.
